# crabby-rs

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
static/: index.html
